# DataLake-Aula-2509

./: README.md
Data-Lake/: README.md  pyproject.toml
Data-Lake/my-pyspark-lab/: start-jupyter.sh
Data-Lake/my-pyspark-lab/docs/: index.md
Data-Lake/my-pyspark-lab/notebooks/.ipynb_checkpoints/: restaurante-apache-iceberg-checkpoint.ipynb  restaurante-delta-lake-checkpoint.ipynb
DataBricks/Dealership - Exemplo Aula/: 001_-_Atifidade_Pratica_-_Lakehouse_-_Preparando_ambiente-68e83384b7c9b.py  002_-_Atividade_Pratica_-_Lakehouse_-_Bronze-68e83389e8d70.py  003_-_Atividade_Pratica_-_Lakehouse_-_Silver-68e83389b8e43.py  004_-_Atividade_Pratica_-_Lakehouse_-_Gold-68e833d468d8d.py  005_-_Atifidade_Pratica_-_Lakehouse_-_Destruindo_ambiente-68e833849813c.py
DataBricks/Restaurante/: mkdocs.yml  readme.md
DataBricks/Restaurante/Notebooks/: Bronze-Silver.py  Cleanup.py  Landing-Bronze.py  Setup.py  ShowTables.py  Silver-Gold.py  firebase.py  gen-lang-client-0462666788-firebase-adminsdk-fbsvc-e91136dbef.json
DataBricks/Restaurante/data/: GerarCSV's.py  cardapio.csv  franquias.csv  ingredientes.csv  profissionais.csv  vendas.csv
DataBricks/Restaurante/docs/: arquitetura.md  index.md  modelo_dados_gold.md
DataBricks/Restaurante/docs/notebooks/: 00_setup.md  01_landing_bronze.md  02_bronze_silver.md  03_silver_gold.md  99_utilitarios.md  index.md
my-pyspark-lab/: pyproject.toml  start-jupyter.sh
my-pyspark-lab/docs/: apache-iceberg.md  delta-lake.md
my-pyspark-lab/notebooks/: 01-testing-formats.ipynb  restaurante-apache-iceberg.ipynb  restaurante-delta-lake.ipynb
