[tool.poetry]
name = "my-pyspark-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = ">=3.5.0"
jupyterlab = "^4.4.8"
delta-spark = ">=3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
